copied-pasted default, simple, 404 and index from old broken website

--- a/app/views/pages/404.liquid
+++ b/app/views/pages/404.liquid
@@ -10,7 +10,7 @@ published: true
   <div class="jumbotron">
     {% editable_text jumbotron, rows: 5, priority: 1 %}
       <h1 class="text-danger">Arrggggh, page not found</h1>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <p>It looks like you wandered a little too far! The page you are looking for does not exist.</p>
     {% endeditable_text %}
   </div>
 </div>
