correction of numerous typos

--- a/app/views/pages/contact.fr.liquid
+++ b/app/views/pages/contact.fr.liquid
@@ -2,5 +2,7 @@
 title: Contact
 published: true
 listed: true
-handle: home
+handle: contact
+meta_description: "Page de contact du site internet du Centre pour l\'amitié franco-russe et franco-chinoise"
+seo_title: "Page de contact du site internet du Centre pour l\'amitié franco-russe et franco-chinoise"
 ---
