--- a/app/views/pages/contact.ru.liquid
+++ b/app/views/pages/contact.ru.liquid
@@ -2,5 +2,7 @@
 title: Китайский
 published: true
 listed: true
-handle: home
+handle: contact
+meta_description: "ССвязаться страница сайта Центра франко-российских и франко-китайских Дружеские"
+seo_title: "ССвязаться страница сайта Центра франко-российских и франко-китайских Дружеские"
 ---
