--- a/app/views/pages/contact.zh-CN.liquid
+++ b/app/views/pages/contact.zh-CN.liquid
@@ -2,5 +2,7 @@
 title: 中文
 published: true
 listed: true
-handle: home
+handle: contact
+meta_description: "该中心的法俄和法 - 中国友谊网站的联系页面"
+seo_title: "该中心的法俄和法 - 中国友谊网站的联系页面"
 ---
