--- a/app/views/snippets/nav.liquid
+++ b/app/views/snippets/nav.liquid
@@ -22,7 +22,7 @@
         {% endfor %}
 
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ 'languages' | translate }}<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ 'languages_for_switcher' | translate }}<span class="caret"></span></a>
           <ul class="dropdown-menu">
 
           {% include 'language_switcher_helper', parent_slug: parent_slug %}
