--- a/app/views/snippets/js_footer.liquid
+++ b/app/views/snippets/js_footer.liquid
@@ -1,6 +1,7 @@
 {{ 'jquery.min.js' | javascript_tag }}
 {{ 'bootstrap.min.js' | javascript_tag }}
 {{ 'application.js' | javascript_tag }}
-{{ 'react_libraries/react-with-addons.min.js' | javascript_tag }}
+{{ 'react_libraries/react-with-addons.js' | javascript_tag }}
 {{ 'react_libraries/react-dom.min.js' | javascript_tag }}
 {{ 'react_components/react_lightbox.js' | javascript_tag }}
+{{ 'react_components/react_card_equalizer.js' | javascript_tag }}
