--- a/app/views/pages/news.liquid
+++ b/app/views/pages/news.liquid
@@ -59,5 +59,7 @@ meta_description: "News page of the website of the Centre for the Franco-russian
       {% endfor %}
     </div>
 
+    <div id="react-box-container-target-element">
+    </div>
 
   {% endblock %}
