--- a/app/views/pages/news.liquid
+++ b/app/views/pages/news.liquid
@@ -21,45 +21,16 @@ meta_description: "News page of the website of the Centre for the Franco-russian
 
   {% block content/main %}
     {% editable_model news, hint: 'some text' %}
-      <div class="row news">
-        {% for news in contents.news %}
-          <div class="news-listing col-sm-6 col-md-4">
-            <div class="thumbnail outer-wrapper-news-div">
-              <div class="inner-wrapper-news-div">
-                <!--div class="news-sizing-wrapper">-->
-                  {% if news.featured_image.url %}
-                    <img src="{{ news.featured_image.url | resize: '400x200#' }}" alt="{{ news.title | escape }}">
-                  {% endif %}
-                  <div class="legend">
-                    <h3>{{ news.title | escape }}</h3>
-                    <div class="teaser">{{ news.teaser }}</div>
-                  </div>
-                <!--</div>-->
-              </div>
-              <p class="btn-container">
-                <!--<a href="/news/{{ news._slug }}"  class="btn btn-primary">-->
-                <a href="{% path_to news %}" class="btn btn-primary">
-                  {{ 'read_more' | translate }}
-                </a>
-              </p>
-            </div>
-          </div>
-          {% cycle  '', '<div class="clearfix visible-sm">&nbsp;</div>' %}
-          {% cycle '', '', '<div class="clearfix hidden-sm hidden-xs">&nbsp;</div>'  %}
-        {% endfor %}
-      </div>
-    {% endeditable_model %}
 
-    <div class="row news">
       {% for news in contents.news %}
-        <div class="react-card-box news-listing col-sm-6 col-md-4" data-read-more="{{ 'read_more' | translate }}" data-teaser='{{ news.teaser | escape }}' data-id="card_{% increment i %}" data-btn-target="{% path_to news %}" data-image-src="{{ news.featured_image.url | resize: '400x200#' }}" data-card-title="{{ news.title | escape }}">
+        <div class="react-card-box hidden" data-read-more="{{ 'read_more' | translate }}" data-teaser='{{ news.teaser | escape }}' data-id="card_{% increment i %}" data-btn-target="{% path_to news %}" data-image-src="{{ news.featured_image.url | resize: '400x200#' }}" data-card-title="{{ news.title | escape }}">
         </div>
-        {% cycle  '', '<div class="clearfix visible-sm">&nbsp;</div>' %}
-        {% cycle '', '', '<div class="clearfix hidden-sm hidden-xs">&nbsp;</div>'  %}
       {% endfor %}
-    </div>
 
-    <div id="react-box-container-target-element">
-    </div>
+      <div id="react-box-container-target-element" class="row news" data-read-more:"{{ 'read_more' | translate }}">
+      </div>
+
+
+    {% endeditable_model %}
 
   {% endblock %}
