--- a/app/views/pages/news.liquid
+++ b/app/views/pages/news.liquid
@@ -27,7 +27,7 @@ meta_description: "News page of the website of the Centre for the Franco-russian
         </div>
       {% endfor %}
 
-      <div id="react-box-container-target-element" class="row news" data-read-more:"{{ 'read_more' | translate }}">
+      <div id="react-box-container-target-element" class="row news" data-read-more="{{ 'read_more' | translate }}">
       </div>
 
 
