--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -36,6 +36,45 @@ body {
       margin-right: auto;
     }
   }
+  .react-news-container-enter {
+    opacity: 0.01;
+  }
+
+  .react-news-container-enter.react-news-container-enter-active {
+    opacity: 1;
+    transition: opacity 300ms ease-in;
+  }
+
+  .react-news-container-leave {
+    opacity: 1;
+  }
+
+  .react-news-container-leave.react-news-container-leave-active {
+    opacity: 0.01;
+    transition: opacity 300ms ease-in;
+  }
+  .react-news-container-appear {
+    opacity: 0.01;
+    max-height: 0px;
+  }
+
+  .react-news-container-appear.react-news-container-appear-active {
+    opacity: 1;
+    max-height: 5000px;
+    overflow: hidden;
+    transition: opacity 3000ms ease-in, max-height 4000ms ease-in;
+  }
+  @keyframes for-footer {
+      from {opacity: 0;}
+      to {opacity: 1;}
+  }
+
+  /* The element to apply the animation to */
+  .footer {
+      opacity: 1;
+      animation-name: for-footer;
+      animation-duration: 4s;
+  }
   /* news/content_type_template.liquid */
   article.news {
     p.tags span {
@@ -85,14 +124,12 @@ body {
 /* the footer */
 .footer {
   margin-top: 70px;
-  background-color: #333;
-  color: #fff;
   p {
     padding: 10px;
     text-align: center;
   }
   a, a:visited {
-    color: #fff;
+    color: #333;
   }
 }
 
