--- a/app/views/pages/layouts/simple.liquid
+++ b/app/views/pages/layouts/simple.liquid
@@ -7,7 +7,7 @@ is_layout: true
 {% block content %}
 
 <section class="header-section">
-  <div class="container header-content">
+  <div class="fluid-container header-content">
     {% block header, short_name: true, priority: 1 %}
 
     {% endblock %}
