--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -10,14 +10,33 @@ body {
   &.page-index {
     section.header-section {
       height: 90vh;
-      .jumbotron {
-        color: #fff;
-        background-image: url('../images/chinese_great_wall.jpg');
-        background-position: center;
-        padding-top: 10px;
-        padding-bottom: 25%;
-        h1, h2 {
-          text-align: left;
+      position: relative;
+      .header-content {
+        height: 100%;
+        width: 100%;
+        .header-bg-image-row {
+          height: 100%;
+          width: 100%;
+        }
+        .header-text-row {
+          /* FIXME - INSERT INTO A MEDIA QUERY */
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          height: 100%;
+          /* UNTIL HERE */
+          opacity: 1;
+          z-index: 1;
+          .vertical-positionner-wrapper-table {
+            display: table;
+            height: 100%;
+            .vertical-positionner-wrapper-table-cell {
+              display: table-cell;
+              vertical-align: middle;
+            }
+          }
         }
       }
     }
