--- a/app/views/snippets/nav.liquid
+++ b/app/views/snippets/nav.liquid
@@ -1,22 +1,9 @@
-<div class="Nav">
-  <nav class="Nav-wrapper">
-    <ul class="Nav__list">
-      {% for page_in_nav in site.pages %}
-        {% if page_in_nav.depth == 1 or page_in_nav.depth == null %}
-        {% comment %} depth == 0 catches index, depth == 1 catches about, depth == null catches news {% endcomment %}
-          <li class="nav-list-item {% if page.slug == page_in_nav.slug %}active-nav-item{% endif %}">
-            {% link_to page_in_nav %}
-          </li>
-        {% endif %}
-      {% endfor %}
-      <li class="nav-list-item dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ 'languages_for_switcher' | translate }}<span class="caret"></span></a>
-        <ul class="dropdown-menu">
+<div class="nav">
+  <nav class="nav-wrapper">
+    <ul class="nav-list">
 
-        {% include 'language_switcher_helper', parent_slug: parent_slug %}
+      {% include 'nav_list_builder', nav_list_item_class: "nav-list-item", active_nav_list_item_class: "active-nav-list-item" %}
 
-        </ul>
-      </li>
     </ul>
   </nav>
 </div>
